added favicon and coded it in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<title>DND Homebrew</title>
+		<link rel="icon" 
+		      type="image/png"
+		      href="http://example.com/myicon.png">
+							<title>DND Homebrew</title>
 	</head>
 	<body>
 		<div class="container">
