--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+	<head profile="http://www.w3.org/2005/10/profile">
+<link rel="icon"
+      type="image/x-icon"
+      href="favicon.ico">>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<link rel="icon" 
-		      type="image/png"
-		      href="http://example.com/myicon.png">
 							<title>DND Homebrew</title>
 	</head>
 	<body>
