--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE HTML>
 <html>
-	<head profile="http://www.w3.org/2005/10/profile">
-<link rel="icon"
-      type="image/x-icon"
-      href="favicon.ico">>
+	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css" />
-							<title>DND Homebrew</title>
+		<title>DND Homebrew</title>
 	</head>
 	<body>
 		<div class="container">
