moved compendium files an added currently black import page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 						<img class ="menu-icon" src="assets/images/map-icon.png" />
 						<h3>Mapping</h3>
 					</div></a>
-					<a class="menulink" href="tools/compendium.html"><div class="menuitem">
+					<a class="menulink" href="tools/compendium.php"><div class="menuitem">
 						<img class ="menu-icon" src="assets/images/compendium-icon.png" />
 						<h3>Compendium</h3>
 					</div></a>
