--- a/tools/compendium/header.html
+++ b/tools/compendium/header.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="../style.css" />
+		<link rel="stylesheet" type="text/css" href="../../style.css" />
 		<title>Compendium</title>
 	</head>
 	<body>
 		<div class="container">
 			<nav class="header">
-				This is the header
+				<a href="import.php">Import</a>
 			</nav>
