Moved header and footer to root. fixed FOUC. Added links to header.

--- a/tools/compendium/header.html
+++ b/tools/compendium/header.html
@@ -2,11 +2,14 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="../../style.css" />
+		<link rel="stylesheet" type="text/css" href="/style.css" />
+
 		<title>Compendium</title>
 	</head>
 	<body>
 		<div class="container">
 			<nav class="header">
-				<a href="import.php">Import</a>
+				<a href="/index.php">Home</a>
+				<a href="/tools/compendium/import.php">Import</a>
+				<a href="/login.php">Signup/Login</a>
 			</nav>
