Re-vamped import and added custom options for importing NPCs

--- a/header.html
+++ b/header.html
@@ -1,14 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<script src="/jquery-3.3.1.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/style.css" />
-
-		<!-- Prevent FOUC -->
-		<style type="text/css">
-		    .hidden {display:none;}
-		  </style>
-		  <script type="text/javascript" src="/scripts/jquery.js"></script>
 
 			<!-- This code is to prevent FOUC -->
 			<script type="text/javascript">
