Did a lot. Working on Selectize for import.php

--- a/header.html
+++ b/header.html
@@ -1,14 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<script src="/jquery-3.3.1.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="/selectize/selectize.js"></script>
 		<link rel="stylesheet" type="text/css" href="/style.css" />
-		<link rel="stylesheet" type="text/css" href="/selectize/selectize.css" />
+		<link rel="stylesheet" type="text/css" href="/chosen/chosen.css" />
+		<link rel="stylesheet" type="text/css" href="/selectize/css/selectize.default.css" />
+		<script src="/selectize/selectize.js" tpye="text/javascript"></script>
 
 			<!-- This code is to prevent FOUC -->
 			<script type="text/javascript">
@@ -27,3 +25,6 @@
 				<a href="/tools/compendium/import.php">Import</a>
 				<a href="/login.php">Signup/Login</a>
 			</nav>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" tpye="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-1.8.3.js" tpye="text/javascript"></script>
+<script src="/selectize/js/standalone/selectize.min.js" tpye="text/javascript"></script>
