--- a/header.html
+++ b/header.html
@@ -2,11 +2,9 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/style.css" />
 		<link rel="stylesheet" type="text/css" href="/chosen/chosen.css" />
 		<link rel="stylesheet" type="text/css" href="/selectize/css/selectize.default.css" />
-		<script src="/selectize/selectize.js" tpye="text/javascript"></script>
 
 			<!-- This code is to prevent FOUC -->
 			<script type="text/javascript">
@@ -28,3 +26,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" tpye="text/javascript"></script>
 <script src="http://code.jquery.com/jquery-1.8.3.js" tpye="text/javascript"></script>
 <script src="/selectize/js/standalone/selectize.min.js" tpye="text/javascript"></script>
+<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js" tpye="text/javascript"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" tpye="text/javascript"></script>
