--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@
 				<a href="/login.php">Signup/Login</a>
 			</nav>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" tpye="text/javascript"></script>
-<script src="http://code.jquery.com/jquery-1.8.3.js" tpye="text/javascript"></script>
+<!--<script src="http://code.jquery.com/jquery-1.8.3.js" tpye="text/javascript"></script>-->
 <script src="/selectize/js/standalone/selectize.min.js" tpye="text/javascript"></script>
-<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js" tpye="text/javascript"></script>
+<!--<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js" tpye="text/javascript"></script>-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" tpye="text/javascript"></script>
